# oc-student-sentiment

./: .env  .gitattributes  .gitignore  Dockerfile  Procfile  azure_ressources_import.py  devenv.nix  nixpacks.toml  pyproject.toml
.github/workflows/: deploy_azure.yaml  deploy_railway.yaml
app/: feedback.csv  main.py  test.http  test_logger.py
app/my_bert_model/: tf_model.h5
app/static/: index.html  script.js  styles.css
app/templates/: index.html
terraform/: .terraform.lock.hcl  aztfexportResourceMapping.json  aztfexportSkippedResources.txt  main.tf  outputs.tf  provider.tf
